[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "caesar-cipher-tool"
version = "0.1.0"
description = "A command-line tool for Caesar cipher encryption and decryption"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

[project.scripts]
caesar = "caesar_cipher.cli:main"